--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
 
 <body>
 
+    <p id="result"><</p>
 
-<div class="crystal"
+    <div class="crystal">
+    </div>
 
-</div>
+    <p id="win"></p>
+    <p id="lost"></p>
+
+
 
 <h1> Crystal Counter!</h1>
 
