--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
 <title>Crystal Game</title>
 
 <link rel="stylesheet" type= "text/css" href="assets/css/style.css>"
+ <link rel="stylesheet" type= "text/javascript" href="/Users/victoriasorone/Documents/GitHub/homework/unit-4-game/game.js">
 
 </head>
 
 <body>
 
+    <h1> Crystal Counter!</h1>
+    
     <p id="result"><</p>
 
     <div class="crystal">
@@ -20,7 +23,7 @@
 
 
 
-<h1> Crystal Counter!</h1>
+
 
 <button src="img.jpg" link href=""
 <button src="img.jpg" link href=""
