--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Crystal Game</title>
 
-<link rel="stylesheet" type= "text/css" href="/Users/victoriasorone/Documents/GitHub/homework/unit-4-game/game.js>"
+<link rel="stylesheet" type= "text/css" href="/Users/victoriasorone/Documents/GitHub/homework/unit-4-game/assets/style.css"
  <link rel="stylesheet" type= "text/javascript" href="/Users/victoriasorone/Documents/GitHub/homework/unit-4-game/game.js">
 
 </head>
@@ -14,9 +14,9 @@
     <div>
     <h1> Crystal Counter!</h1>
 
-        <h2> Number Chosen </h2><p id="result"> </p>
-        <h2> Wins </h2><p id="win"></p>
-        <h2> Losses </h2><p id="lost"></p>
+        <h2> Number Chosen: </h2><p id="result"> </p>
+        <h2> Wins: </h2><p id="win"></p>
+        <h2> Losses: </h2><p id="lost"></p>
         
     </div>
 
@@ -29,7 +29,6 @@
 
 
 <button src="img.jpg" link href="" class="button1"></button>
-
 <button src="img.jpg" link href="" class="button2"></button>
 <button src="img.jpg" link href="" class="button3"></button>
 <button src="img.jpg" link href="" class="button4"></button>
