--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <title>Crystal Game</title>
 
-<link rel="stylesheet" type= "text/css" href="/Users/victoriasorone/Documents/GitHub/homework/unit-4-game/assets/style.css"
- <link rel="stylesheet" type= "text/javascript" href="/Users/victoriasorone/Documents/GitHub/homework/unit-4-game/game.js">
+<link rel="stylesheet" type= "text/css" href="/Users/victoriasorone/Documents/GitHub/homework/unit-4-game/assets/style.css">
+<link rel="stylesheet" type= "text/javascript" href="/Users/victoriasorone/Documents/GitHub/homework/unit-4-game/game.js">
 
 </head>
 
@@ -28,10 +28,10 @@
 
 
 
-<button src="img.jpg" link href="" class="button1"></button>
-<button src="img.jpg" link href="" class="button2"></button>
-<button src="img.jpg" link href="" class="button3"></button>
-<button src="img.jpg" link href="" class="button4"></button>
+<button src="img.jpg" class="button1"></button>
+<button src="img.jpg" class="button2"></button>
+<button src="img.jpg" class="button3"></button>
+<button src="img.jpg" class="button4"></button>
 
 
 
