--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <h2> Number Chosen: </h2><p id="result"> </p>
         <h2> Wins: </h2><p id="win"></p>
         <h2> Losses: </h2><p id="lost"></p>
+        <h2> Counter: </h2><p id="counter"></p>
         
     </div>
 
